--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>annyang! Easily add speech recognition to your site</title>
+  <title>Doomsday Trainer</title>
   <meta name="description" content="Random generate dates and listen for the user to talk the weekday." />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="http://chancejs.com/chance.min.js"></script>
