Added js folder.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Doomsday Trainer</title>
   <meta name="description" content="Random generate dates and listen for the user to talk the weekday." />
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="http://chancejs.com/chance.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/annyang/2.0.0/annyang.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/chance.min.js"></script>
+  <script src="js/annyang.min.js"></script>
   <script>
 
   var ddmmyyyy = function(d) {
@@ -126,11 +126,6 @@
     setDate();
   });
   </script>
-
-  <script>
-
-  </script>
-  <link rel="stylesheet" href="css/main.min.css" />
 </head>
 <body>
   <h1>Weekday!</h1>
