--- a/index.html
+++ b/index.html
@@ -81,27 +81,27 @@
 
   if (annyang) {
     // Let's define a command.
-    var commands = {
-      'sunday': sunday,
-      'monday': monday,
-      'tuesday': tuesday,
-      'wednesday': wednesday,
-      'thursday': thursday,
-      'friday': friday,
-      'saturday': saturday,
-      'another': setDate,
-    };
-
     // var commands = {
-    //   'domingo': sunday,
-    //   'segunda': monday,
-    //   'terça': tuesday,
-    //   'quarta': wednesday,
-    //   'quinta': thursday,
-    //   'sexta': friday,
-    //   'sábado': saturday
+    //   'sunday': sunday,
+    //   'monday': monday,
+    //   'tuesday': tuesday,
+    //   'wednesday': wednesday,
+    //   'thursday': thursday,
+    //   'friday': friday,
+    //   'saturday': saturday,
+    //   'another': setDate,
     // };
-    // annyang.setLanguage('pt-BR');
+
+    var commands = {
+      'domingo': sunday,
+      'segunda': monday,
+      'terça': tuesday,
+      'quarta': wednesday,
+      'quinta': thursday,
+      'sexta': friday,
+      'sábado': saturday
+    };
+    annyang.setLanguage('pt-BR');
 
     // Add our commands to annyang
     annyang.addCommands(commands);
@@ -123,6 +123,12 @@
   <p>What weekday is this: <span id="date"></span>?</p>
   <p id="results"></p>
   <p id="time" style="display: none;">You took <span></span> seconds.</p>
-
+  <button onclick="sunday()">Sunday</button>
+  <button onclick="monday()">Monday</button>
+  <button onclick="tuesday()">Tuesday</button>
+  <button onclick="wednesday()">Wednesday</button>
+  <button onclick="thursday()">Thursday</button>
+  <button onclick="saturday()">Saturday</button>
+  <button onclick="setDate()">Another</button>
 </body>
 </html>
