Add Friday button.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
       'quarta': wednesday,
       'quinta': thursday,
       'sexta': friday,
-      'sábado': saturday
+      'sábado': saturday,
+      'nova data': setDate,
+      'outro': setDate
     };
     annyang.setLanguage('pt-BR');
 
@@ -128,6 +130,7 @@
   <button onclick="tuesday()">Tuesday</button>
   <button onclick="wednesday()">Wednesday</button>
   <button onclick="thursday()">Thursday</button>
+  <button onclick="thursday()">Friday</button>
   <button onclick="saturday()">Saturday</button>
   <button onclick="setDate()">Another</button>
 </body>
